--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
         <img class="logo" src="chat.png" alt="chat logo">
         <h1>Welcome to iDiscuss chat app</h1>
     </nav>
-    <div class="container">
-        <!-- <div class="message right">Deba: Hey How are you?</div>
-        <div class="message left">Agni: Bhai I am fine. How about you?</div> -->
-    </div>
+    <div class="container"></div>
     <div class="send">
         <form action="#" id="send-container">
             <input type="text" name="messageInp" id="messageInp">
