--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iChat - Realtime Node Socket.io Chat App</title>
-    <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
+    <script defer src="https://ichat-vtpa.onrender.com/socket.io/socket.io.js"></script>
     <script defer src="js/client.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,7 +18,7 @@
     <div class="container"></div>
     <div class="send">
         <form action="#" id="send-container">
-            <input type="text" name="messageInp" id="messageInp">
+            <input type="text" name="messageInp" id="messageInp" placeholder="Type a message..." autocomplete="off">
             <button class="btn" type="submit">Send</button>
         </form>
     </div>
